2012-09-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asdbg.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/assym.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/assubr.c,
	* sdas/asxxsrc/asxxxx.h: next small steps towards ASxxxx v5

2012-09-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asz80/Makefile.in,
	* sdas/asz80/as_z80.vcxproj,
	* sdas/asz80/as_z80.vcxproj.filters,
	* sdas/asz80/z80ext.c: removed z80ext.c
	* sdas/as8051/i51mch.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asz80/z80.h,
	* sdas/asz80/z80mch.c: small step towards ASxxxx v5

2012-09-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/pic16/glue.c (pic16_initPointer): fixed pointer initialization
	from address of struct/union

2012-09-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asxxxx.h,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lklist.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/z80/main.c: again a small step towards ASxxxx v5

2012-09-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/ralloc2.cc (inst_sane): fixed bug #3558402

2012-09-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3564649.c:
	  Disable test for host, since we cannot assume C11 support yet.

2012-09-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20030209-1.c:
	  Reduced array size, reenabled test.
	* support/regression/tests/gcc-torture-execute-991016-1.c:
	  Enabled test for targets that support long long, since returning long long was implemented some time ago.

2012-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglue.c (emitRegularMap, printIvalType, printIvalBitFields),
	* src/SDCCast.c (constExprValue): fixed bug #3560781 and related