@@ -25,7 +25,6 @@ void foo (char *s);
 void
 testTortureExecute (void)
 {
-#if 0
   s1.m1 = -1;
   p1 = &s1;
 
@@ -43,7 +42,6 @@ testTortureExecute (void)
     ASSERT (0);
 
   return;
-#endif
 }
 
 int func1(int *p) { return(*p); }
